Reader: Fix captioned images alignment

--- a/client/reader/full-post/_style.scss
+++ b/client/reader/full-post/_style.scss
@@ -225,6 +225,24 @@
 		position: relative;
 		max-width: 100%;
 
+		&.alignright {
+			float: right;
+		}
+
+		&.alignleft {
+			float: left;
+		}
+
+		&.alignright,
+		&.alignleft {
+			max-width: 50%;
+
+			img.alignright,
+			img.alignleft {
+				float: none;
+			}
+		}
+
 		img {
 			display: block;
 			margin: 0 auto;
